modified template and db

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,29 +6,19 @@
 
 <body>
     <div>
-        <h1>
-            <a href="">Putshong</a>
-        </h1>
+        <h1><a href="">Putshong</a></h1>
     </div>
 
+    {% for post in posts %}
     <div>
-        <p>published: 16.03.2018, 20:51</p>
-        <h2>
-            <a href="">My first post</a>
-        </h2>
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida
-            at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-            sit amet risus.</p>
-    </div>
+        
+        <h1><a href="">{{ post.title }}</a></h1><br>
+        <p>{{ post.text|linebreaksbr }}</p><br>
+        <p>published: {{ post.published_date }}</p><br><br>
 
-    <div>
-        <p>published: 16.03.2018, 21:14</p>
-        <h2>
-            <a href="">My second post</a>
-        </h2>
-        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida
-            at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
     </div>
+    {% endfor %}
+
 </body>
 
 </html>
