--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,24 +1,15 @@
-<html>
+{% extends 'blog/base.html' %}
 
-<head>
-    <title>Putshong blog</title>
-</head>
-
-<body>
-    <div>
-        <h1><a href="">Putshong</a></h1>
-    </div>
-
+{% block content %}
     {% for post in posts %}
-    <div>
-        
-        <h1><a href="">{{ post.title }}</a></h1><br>
-        <p>{{ post.text|linebreaksbr }}</p><br>
-        <p>published: {{ post.published_date }}</p><br><br>
-
-    </div>
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1>
+                <a href="">{{ post.title }}</a>
+            </h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
     {% endfor %}
-
-</body>
-
-</html>
+{% endblock %}
